LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/Customer_Setup__c.object-meta.xml
<CustomObject>
    <description>Track customer setups.</description>
    <label>Customer Setup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>