LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <description>Hidden. Used in the &apos;Customer Setup Complete&apos; email template to notify users of the setup complete.</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  Account__c</formula>
    <label>Account Link</label>
    <type>Text</type>
</CustomField>