LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Hidden. Used in the &apos;Customer Setup Complete&apos; template to notify users of the setup complete.</description>
    <formula>Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>