LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Account_Owner_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_2__c</fullName>
    <formula>Account__r.Owner.Email</formula>
    <label>Account Owner Email 2</label>
    <type>Text</type>
</CustomField>