LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>SF-85: Hidden. Used in the &apos;Customer setup is complete&apos; email alert to notify account owner when the setup is complete. Populated in the &apos;Spin Off Customer Setup&apos; process builder when the customer setup record is established. Cannot be a simple formula to account because must be an email field to be referenced on email alert (Customer setup is complete).</description>
    <label>Account Owner Email</label>
    <type>Email</type>
</CustomField>