LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Actual_Setup_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Setup_Difficulty__c</fullName>
    <inlineHelpText>Actual setup difficulty</inlineHelpText>
    <label>Actual Setup Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>