LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Admin_Training_By__c.field-meta.xml
<CustomField>
    <fullName>Admin_Training_By__c</fullName>
    <label>Admin Training By</label>
    <type>Date</type>
</CustomField>