LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/AE_Hand_Off_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Hand_Off_Notes__c</fullName>
    <description>MANUAL - Notes from the AE which are provided on the Opportunity and then passed via the OPPYCLOSE trigger.</description>
    <label>Handoff Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>