LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/AutoRec_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AutoRec_Quantity__c</fullName>
    <description>AUTO - Set by OPPYCLOSE_Trigger. The quantity for AutoRec. This may be a number (in the case of Accounts) or a string (in the case of Transactions).</description>
    <label>AutoRec Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>