LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/AutoRec_Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>AutoRec_Quantity_Type__c</fullName>
    <description>AUTO - Set by OPPYCLOSE_Trigger. This can be &quot;Transactions&quot; or &quot;Accounts&quot; depending on the nature of the original sale.</description>
    <label>AutoRec Quantity Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>