LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/AutoRec_Training_On__c.field-meta.xml
<CustomField>
    <fullName>AutoRec_Training_On__c</fullName>
    <description>MANUAL - The date that AutoRec training was performed.</description>
    <label>AutoRec Training On</label>
    <type>Date</type>
</CustomField>