LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Backlog_Date__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Date__c</fullName>
    <description>2020-02-06 - N. Ehrmann - AUTO - If the Setup is not past a certain stage and it has been more than 90 days since the start date (if one is provided), then flag the Setup as Backlogged.</description>
    <formula>IF(
   OR(
      ISPICKVAL(Status__c, &quot;Send Setup Link&quot;),
      ISPICKVAL(Status__c, &quot;Launch Call&quot;),
      ISPICKVAL(Status__c, &quot;Pending Documentation&quot;),
      ISPICKVAL(Status__c, &quot;Mapping Preparation&quot;),
      ISPICKVAL(Status__c, &quot;Mapping Review&quot;),
      ISPICKVAL(Status__c, &quot;Initial Setup&quot;)
   ),
   IF(
      ISNULL(Setup_Subscription_Start_Date__c),
      Account__r.Subscription_Start_Date_Opp__c,
      Setup_Subscription_Start_Date__c
   ) + 90
   ,
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Date</label>
    <type>Date</type>
</CustomField>