LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Close_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Close_Analytics__c</fullName>
    <formula>Opportunity__r.Close_Analytics_Seats__c &gt; 0</formula>
    <inlineHelpText>Controlled on the opportunity level.</inlineHelpText>
    <label>Close Analytics</label>
    <type>Checkbox</type>
</CustomField>