LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Cloud_Connect__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Connect__c</fullName>
    <formula>NOT(ISPICKVAL(Opportunity__r.Cloud_Connect__c, &quot;No&quot;))</formula>
    <label>FloQast Connect</label>
    <type>Checkbox</type>
</CustomField>