LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Cloud_Storage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Storage_Notes__c</fullName>
    <inlineHelpText>Cloud Storage Admins, Integration Creds, Root Folder Location</inlineHelpText>
    <label>Cloud Storage Notes</label>
    <type>TextArea</type>
</CustomField>