LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Cloud_Storage_Sync__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Storage_Sync__c</fullName>
    <label>Cloud Storage Sync</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>