LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Cloud_Storage_System__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Storage_System__c</fullName>
    <formula>TEXT( Account__r.Cloud_Storage_System__c )</formula>
    <inlineHelpText>Set on the Account level.</inlineHelpText>
    <label>Cloud Storage System</label>
    <type>Text</type>
</CustomField>