LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>