LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Company_Chat__c.field-meta.xml
<CustomField>
    <fullName>Company_Chat__c</fullName>
    <formula>TEXT( Account__r.Company_Chat__c  )</formula>
    <label>Company Chat</label>
    <type>Text</type>
</CustomField>