LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Completed_Secondary_Setups__c.field-meta.xml
<CustomField>
    <fullName>Completed_Secondary_Setups__c</fullName>
    <description>2020-02-27 - N. Ehrmann - AUTO - Calculated by SetupRollups. The number of completed Secondary Setups for this Primary Setup.</description>
    <label>Completed Secondary Setups</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>