LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Completed_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_Subtasks__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - A rollup of completed subtasks.</description>
    <label>Completed Subtasks</label>
    <summaryFilterItems>
        <field>Customer_Setup_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Done</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Setup_Task__c.Customer_Setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>