LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <label>Contract Notes</label>
    <type>TextArea</type>
</CustomField>