LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Corporate_Status__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Status__c</fullName>
    <description>AUTO - The Corporate Status from the Account.</description>
    <formula>TEXT(Account__r.Corporate_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the ACCOUNT.</inlineHelpText>
    <label>Corporate Status</label>
    <type>Text</type>
</CustomField>