LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Cross_Sell_Upsell_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Upsell_Opportunities__c</fullName>
    <label>Cross-Sell/Upsell Opportunities</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>