LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/CS_Pod__c.field-meta.xml
<CustomField>
    <fullName>CS_Pod__c</fullName>
    <formula>Account__r.CS_Pod_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Pod</label>
    <type>Text</type>
</CustomField>