LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <formula>Account__r.Current_ARR__c</formula>
    <inlineHelpText>Set on the Account level.</inlineHelpText>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>