LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Date_Flux_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Flux_Docs_Received__c</fullName>
    <description>MIS-133: Stamped by a process builder when Flux Docs Received field is checked on.</description>
    <label>Date Flux Docs Received</label>
    <type>Date</type>
</CustomField>