LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Date_Flux_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Flux_Training_Complete__c</fullName>
    <description>MIS-133</description>
    <label>Date Flux Training Complete</label>
    <type>Date</type>
</CustomField>