LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_for_Post_Setup_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Days_for_Post_Setup_Check_In__c</fullName>
    <formula>FLOOR( Post_Setup_Check_In_On__c - Team_Training_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days for Post Setup Check In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>