LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Approve_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Approve_Mapping__c</fullName>
    <formula>FLOOR( Mapping_Approved_On__c - Mapping_Prepared_On__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Approve Mapping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>