LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Close_Goal_vs_Current__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_Goal_vs_Current__c</fullName>
    <label>Days to Close Goal vs Current</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>