LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Complete_Launch_Call__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete_Launch_Call__c</fullName>
    <formula>FLOOR(  Launch_Call_On__c -  Setup_Link_Sent_On__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between creation of the record and completion of the launch call.</inlineHelpText>
    <label>Days to Complete Launch Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>