LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Get_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Get_Documentation__c</fullName>
    <formula>FLOOR(Documents_Received_On__c -  Launch_Call_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between the launch call and receiving documents.</inlineHelpText>
    <label>Days to Get Documentation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>