LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Initial_Setup__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Initial_Setup__c</fullName>
    <formula>FLOOR( Initial_Setup_On__c - Mapping_Approved_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Initial Setup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>