LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Optimization_Call__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Optimization_Call__c</fullName>
    <formula>FLOOR( Optimization_Call_On__c - Post_Setup_Check_In_On__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Optimization Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>