LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Prepare_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Prepare_Mapping__c</fullName>
    <formula>FLOOR( Mapping_Prepared_On__c -  Documents_Received_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Prepare Mapping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>