LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Send_Setup_Link__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Send_Setup_Link__c</fullName>
    <formula>FLOOR(  Setup_Link_Sent_On__c   -  DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Send Setup Link</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>