LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_To_Setup_Flux_On_Opp_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Setup_Flux_On_Opp_Close__c</fullName>
    <description>MIS-133: Calculates difference between opp close date and date when flux was actually setup to show how many days it took to setup flux subsequence opp close.</description>
    <formula>Date_Flux_Setup_Complete__c - Opportunity__r.CloseDate</formula>
    <label>Days To Setup Flux On Opp Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>