LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Setup_Link_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Setup_Link_Complete__c</fullName>
    <description>2020-02-06 - N. Ehrmann - AUTO - The days from Setup Link Sent to Setup Link Complete.</description>
    <formula>IF(
   Setup_Link_Complete_Date__c = null,
   TODAY() -  Setup_Link_Sent_On__c,
   Setup_Link_Complete_Date__c - Setup_Link_Sent_On__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Setup Link Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>