LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Train_Admins__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Train_Admins__c</fullName>
    <formula>FLOOR( Admin_Training_On__c - Initial_Setup_On__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Train Admins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>