LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Train_Teams__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Train_Teams__c</fullName>
    <formula>FLOOR( Team_Training_On__c - Admin_Training_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Train Teams</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>