LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Days_to_Transfer_to_AM__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Transfer_to_AM__c</fullName>
    <formula>FLOOR(Transferred_to_AM_On__c -  Optimization_Call_On__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Transfer to AM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>