LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Documents_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Documents_Due_By__c</fullName>
    <label>Documents Due By</label>
    <type>Date</type>
</CustomField>