LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Documents_Received_On__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_On__c</fullName>
    <inlineHelpText>Determines how many days it took to receive documents in the &apos;Days to Receive Documents&apos; field.</inlineHelpText>
    <label>Documents Received On</label>
    <type>Date</type>
</CustomField>