LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <formula>TEXT(Opportunity__r.Product__c)</formula>
    <inlineHelpText>Controlled on the opportunity level.</inlineHelpText>
    <label>Edition</label>
    <type>Text</type>
</CustomField>