LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <formula>TEXT(Account__r.ERP__c )</formula>
    <inlineHelpText>Set on the Account level.</inlineHelpText>
    <label>ERP</label>
    <type>Text</type>
</CustomField>