LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/ERP_Notes__c.field-meta.xml
<CustomField>
    <fullName>ERP_Notes__c</fullName>
    <inlineHelpText>ERP Admins, TB/COA Info, Other Integration Notes</inlineHelpText>
    <label>ERP Notes</label>
    <type>TextArea</type>
</CustomField>