LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/ERP_Version__c.field-meta.xml
<CustomField>
    <fullName>ERP_Version__c</fullName>
    <description>AUTO - ERP Version from Account.</description>
    <formula>TEXT(Account__r.ERP_Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the ACCOUNT. Some ERP values have versions that can be selected.</inlineHelpText>
    <label>ERP Version</label>
    <type>Text</type>
</CustomField>