LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Estimated_Setup_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Setup_Difficulty__c</fullName>
    <formula>TEXT(Opportunity__r.Setup_difficulty_1_5__c)</formula>
    <inlineHelpText>Set on the parent pre-sale opportunity.</inlineHelpText>
    <label>Pre-sale Setup difficulty (1-10)</label>
    <type>Text</type>
</CustomField>