LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Expected_Migrations__c.field-meta.xml
<CustomField>
    <fullName>Expected_Migrations__c</fullName>
    <label>Expected Migrations</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>