LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Features_Requested__c.field-meta.xml
<CustomField>
    <fullName>Features_Requested__c</fullName>
    <label>Features Requested</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>