LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <formula>TEXT(Account__r.Fiscal_Year_End__c)</formula>
    <label>Fiscal Year End</label>
    <type>Text</type>
</CustomField>