LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Flux_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Flux_Analysis__c</fullName>
    <formula>IF( ISPICKVAL(Opportunity__r.Flux_Analysis__c, &quot;Yes&quot;) , true, false)</formula>
    <inlineHelpText>Controlled on the opportunity level.</inlineHelpText>
    <label>Flux Analysis</label>
    <type>Checkbox</type>
</CustomField>