LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Flux_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Flux_Docs_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-133</description>
    <label>Flux Docs Received</label>
    <type>Checkbox</type>
</CustomField>