LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Flux_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Flux_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-133</description>
    <label>Flux Setup Complete</label>
    <type>Checkbox</type>
</CustomField>