LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Flux_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Flux_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flux Training Complete</label>
    <type>Checkbox</type>
</CustomField>