LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>AUTO - The Industry from the Account.</description>
    <formula>TEXT(Account__r.Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the ACCOUNT.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>