LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Initial_Setup_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_By__c</fullName>
    <label>Initial Setup By</label>
    <type>Date</type>
</CustomField>