LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Initial_Setup_On__c.field-meta.xml
<CustomField>
    <fullName>Initial_Setup_On__c</fullName>
    <label>Initial Setup On</label>
    <type>Date</type>
</CustomField>