LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Launch_Call_By__c.field-meta.xml
<CustomField>
    <fullName>Launch_Call_By__c</fullName>
    <label>Launch Call By</label>
    <type>Date</type>
</CustomField>