LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Mapping_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Approved_On__c</fullName>
    <label>Mapping Approved On</label>
    <type>Date</type>
</CustomField>