LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Mapping_Preparation_By__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Preparation_By__c</fullName>
    <label>Mapping Preparation By</label>
    <type>Date</type>
</CustomField>