LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Mapping_Prepared_On__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Prepared_On__c</fullName>
    <label>Mapping Prepared On</label>
    <type>Date</type>
</CustomField>