LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Number_of_CAS_Entities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CAS_Entities__c</fullName>
    <inlineHelpText>Number of CAS clients to set up</inlineHelpText>
    <label>Number of CAS Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>