LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Number_of_Champions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Champions__c</fullName>
    <label>Number of Champions</label>
    <summaryForeignKey>Champion__c.Customer_Setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>