LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Number_of_Entities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entities__c</fullName>
    <description>MIS-222: Number of entities from the opportunity. Used in estimating setup difficulty.</description>
    <formula>Opportunity__r.Number_of_Entities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set on the opportunity. Used in estimating setup difficulty.</inlineHelpText>
    <label>Number of Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>