LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pre-sale parent opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pre-sale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Setups</relationshipLabel>
    <relationshipName>Customer_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>