LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>MIS-133</description>
    <formula>Opportunity__r.CloseDate</formula>
    <inlineHelpText>Opportunity close date used in calculate how many days it took to setup Flux subsequent opportunity close.</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>