LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Optimization_Call_By__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Call_By__c</fullName>
    <label>Optimization Call By</label>
    <type>Date</type>
</CustomField>