LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Other_Notes_for_AMs__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes_for_AMs__c</fullName>
    <label>Other Notes for AMs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>