LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Other_Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Setup_Notes__c</fullName>
    <label>Other Setup Notes</label>
    <type>TextArea</type>
</CustomField>