LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Overall_Subtask_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Subtask_Status__c</fullName>
    <description>2020-05-15 - N. Ehrmann - AUTO - The overall status of subtasks.</description>
    <formula>IF(
   Subtasks__c &gt; Completed_Subtasks__c,
   &quot;OUTSTANDING SUBTASKS&quot;,
   &quot;ALL SUBTASKS COMPLETED&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Subtask Status</label>
    <type>Text</type>
</CustomField>