LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>