LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Personalities__c.field-meta.xml
<CustomField>
    <fullName>Personalities__c</fullName>
    <label>Personalities</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>