LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Post_Setup_Check_In_By__c.field-meta.xml
<CustomField>
    <fullName>Post_Setup_Check_In_By__c</fullName>
    <inlineHelpText>Due 2 weeks after the admin training completion date.</inlineHelpText>
    <label>Post Setup Check In By</label>
    <type>Date</type>
</CustomField>