LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Post_Setup_Check_In_On__c.field-meta.xml
<CustomField>
    <fullName>Post_Setup_Check_In_On__c</fullName>
    <label>Post Setup Check In On</label>
    <type>Date</type>
</CustomField>