LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Primary_Setup__c.field-meta.xml
<CustomField>
    <fullName>Primary_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-02-27 - N. Ehrmann - For multi-phase setups, this field indicates the original primary Customer Setup record.</description>
    <label>Primary Setup</label>
    <referenceTo>Customer_Setup__c</referenceTo>
    <relationshipLabel>Secondary Setups</relationshipLabel>
    <relationshipName>Secondary_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>