LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Primary_Setup_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_Setup_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only Support users can be assigned as a primary lead.</inlineHelpText>
    <label>Primary Setup Lead</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Support users can be assigned as a primary lead.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Support</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>