LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Primary_Setup_Lead_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Primary_Setup_Lead_Current_User__c</fullName>
    <description>Used in views to show customer setups where the current user is a primary setup lead.</description>
    <formula>IF( Primary_Setup_Lead__c =  $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Setup Lead Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>