LWCLearnwithFLOWOrg/force-app/main/default/objects/Customer_Setup__c/fields/Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status__c</fullName>
    <label>Prior Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>